--- a/public/styles.css
+++ b/public/styles.css
@@ -93,7 +93,9 @@ section.active {
     color: rgb(255, 255, 0);
     font-family: 'Times New Roman', Times, serif;
 }
-
+.home-text{
+    color: gold;
+}
 .slider-container {
     position: relative;
     width: 100%;
