--- a/public/styles.css
+++ b/public/styles.css
@@ -414,7 +414,7 @@ section.active {
     color: aqua;
 }
 
-.full-img {
+.fullscreen-img {
     width: 100%;
     height: 100%;
     object-fit: contain; 
